# check-python-h-first

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
_modules/: index.html
_modules/check_python_h_first/: get_submodule_paths.html  single_file.html  wrapper.html
_sources/api/: check_python_h_first.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/: check_python_h_first.html  modules.html
docs/: conf.py  index.rst
src/check_python_h_first/: __init__.py  __main__.py  get_submodule_paths.py  single_file.py  skeleton.py  wrapper.py
tests/: bad_extension.c  conftest.py  good_extension.c  myheader.h  numpy_system.c  python_h_system.c  system_numpy.c  system_python_h.c  test_main.py  test_single_file.py  test_skeleton.py  test_submodule.py  test_wrapper.py
